Fix refresh size on small screen

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -40,6 +40,7 @@ html, body {
   .reset {
     margin-right: 10px;
     position: relative;
+    display: inline-block;
     height: 64px;
     &:before {
       vertical-align: middle;
